tests/pass/files/proj6_pass_man_array-init.c
int main () {
    int a[6] = {100, 50, 20, 10, 5, 1};
    char b[6] = {'A', 'B', 'C', 'D', 'E', 'F'};
}